k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travelforge
  namespace: travelforge
  annotations:
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "3"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: travelforge.test
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: travelforge-backend
                port:
                  number: 5000
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: travelforge-grafana
                port:
                  number: 3000
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: travelforge-prometheus
                port:
                  number: 9090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: travelforge-frontend
                port:
                  number: 80
