k8s/networkpolicy-allow-ingress-to-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller-to-prometheus
  namespace: travelforge
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: travelforge-prometheus
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: travelforge-grafana
      ports:
        - protocol: TCP
          port: 9090
