k8s/networkpolicy-allow-monitoring-egress-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-egress
  namespace: travelforge
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: travelforge-prometheus
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: travelforge-backend
      ports:
        - protocol: TCP
          port: 5000
